<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Blocktopograph</string>
    <string name="brand_sub">A community-made app</string>
    <string name="title_worlditem_list">Select a world</string>
    <string name="title_worlditem_detail">World</string>
    <string name="title_activity_world">World</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_changelog">Changelog</string>
    <string name="no_sdcard_access">Cannot open worlds, no read/write access on storage!
        Try restarting the app and accept the read/write permission request.</string>
    <string name="no_custom_markers_title">No custom markers!</string>
    <string name="no_custom_markers">There are no custom markers yet! \n
        You can create one by long-tapping on the place on the map where you want a marker,
            then tap \"Create custom marker\".
        Then choose a marker icon and a Y-coordinate.
        And then check if you can find it here!</string>
    <string name="app_about">
        This app is created by <b>Protol Lambda</b> (Link removed as he asked to),
        contributed by
        <a href="https://github.com/MithrilMania">@MithrilMania</a>,
        <a href="https://github.com/flagmaggot">@flagmaggot</a>,
        <a href="https://github.com/oO0oO0oO0o0o00">@MeowCat</a>,
        <a href="https://github.com/MiemieMethod">@MiemieMethod</a>,
        <a href="https://github.com/LordJunior">Manuel</a>,
        ScrapperBox25, Tcbdxh and many others as well.\n\n
        Available on Google Play.\n\n
        Current active github repository:
        <a href="https://github.com/oO0oO0oO0o0o00/blocktopograph">github.com/oO0oO0oO0o0o00/blocktopograph</a>
        Feel free to star or fork, help with the project or simply add your own language support.
        <b>Your github contribution is welcomed!</b>
        More information (including the roadmap, changelog and help-information) can be found at:
        <a href="http://blocktopograph.protolambda.com">blocktopograph.protolambda.com</a>. \n
        \n
        Please make a backup of all your loved MCPE worlds in case of data-corruption!\n
        NOTE: Minecraft might not load a whole world because of a single corrupt chunk of NBT!\n
        \n
            This app is built and tested for MCPE 1.9.x(beta), 1.8.x, 1.7.x, 1.6.x, 1.5.x, 1.4.x, 1.2.x, 1.1.x, 1.0.x, 0.16.x, 0.15.x, and 0.14.x\n
            Older MCPE versions are not supported.\n
        \n
        \n
        <i>Disclaimer</i>\n
        <b>This app is not affiliated with Minecraft, Mojang AB or Microsoft.</b>\n
        This is not an official but a fan made app.\n
        Minecraft is a trademark of Mojang AB.\n
        Please note:\n
            &#8226; NOT AN OFFICIAL MINECRAFT PRODUCT. NOT APPROVED BY OR ASSOCIATED WITH MOJANG.\n
            &#8226; THE APP IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND.\n
        \n
        \n
        <i>Used libraries</i>\n
        &#8226; <a href="https://github.com/Clans/FloatingActionButton">FloatingActionButton</a> \n
        &#8226; <a href="https://github.com/mithrilmania/TileView">
                    Tileview, fork by mithrilmania</a> \n
        &#8226; <a href="https://github.com/Mojang/leveldb-mcpe">leveldb-mcpe</a> \n
            with <a href="https://github.com/mithrilmania/android-leveldb">
                    android-leveldb, fork by mithrilmania</a> \n
        \n
        <i>Source code on GitHub:</i>\n
        <a href="https://github.com/mithrilmania/blocktopograph">github.com/mithrilmania/blocktopograph</a> \n
        \n
    </string>
    <string name="app_help">The app documentation can be found at (maybe out of date):
        <a href="http://blocktopograph.protolambda.com/help">
            blocktopograph.protolambda.com/help
        </a>.
    </string>
    <string name="app_changelog" formatted="false">
        Version: <xliff:g example="0.0.1" id="version">%1$s</xliff:g>
        <![CDATA[<br/><br/>
        Full changelog can be found at (out of date):
        <a href="http://blocktopograph.protolambda.com/changelog">
            blocktopograph.protolambda.com/changelog
        </a>]]>
    </string>
    <string name="world_seed_prefix">World seed:</string>
    <string name="map_water_mark" translatable="false">Blocktopograph</string>
    <string name="create_marker_info">
        Marker icons:\n
        &#8226; default_marker, blue_marker, green_marker, red_marker \n
        &#8226; Entity data-names (case sensitive) \n
        &#8226; Block data-names (case sensitive) \n
    </string>
    <string name="reloaded_world_list">Reloaded world list.</string>
    <string name="could_not_find_worlds">Could not find any worlds!</string>
    <string name="no_read_write_access">No read/write access to worlds.</string>
    <string name="storage_path_here">Storage path here…</string>
    <string name="open_world_custom_path">Open world with custom path</string>
    <string name="open">Open</string>
    <string name="report_path_and_previous_search" formatted="false">
        Your path: <xliff:g example="/storage/emulated/0/games/com.mojang/minecraftWorlds/worldName" id="file_path">%1$s</xliff:g>\n
        \n
        Already searched for world folders in <xliff:g example="/storage/emulated/0/games/com.mojang/minecraftWorlds/" id="file_path">%2$s</xliff:g></string>
    <string name="no_file_folder_found_at_path">No file/folder found at path!</string>
    <string name="worldpath_is_not_directory">
        That path (optionally suffixed with /level.dat) is not a directory!</string>
    <string name="no_level_dat_found">No level.dat file found!</string>
    <string name="error_opening_world">An error occurred while opening the world.</string>
    <string name="ask_close_world">Do you want to close this world?</string>
    <string name="leveldb_key_here">levelDB key here…</string>
    <string name="open_nbt_from_db">Open NBT from DB</string>
    <string name="invalid_keyname">Invalid key name.</string>
    <string name="cannot_find_db_entry_with_name">Cannot find db entry with that name!</string>
    <string name="failed_to_read_x_from_db" formatted="false">
        Failed to read \"<xliff:g example="very_long_DB_key" id="some_db_key">%1$s</xliff:g>\"
            from world database.</string>
    <string name="no_multiplayer_data_found">No multiplayer data found.</string>
    <string name="select_player">Select player</string>
    <string name="open_nbt">Open NBT</string>
    <string name="failed_read_player_from_db_with_key_x">Failed to open player entry in DB. key:
        <xliff:g example="player_123456790" id="player_db_key">%1$s</xliff:g></string>
    <string name="error_cannot_open_world_close_and_try_again">
        The current Minecraft world could not be opened.
        Try restarting this app, and close the world in MCPE if it was open.</string>
    <string name="confirm_close_world">Do you want to close this world?</string>
    <string name="confirm_close_nbt_editor">Do you really want to close this NBT editor?</string>
    <string name="teleport_local_player">Teleport local player</string>
    <string name="create_custom_marker">Create custom marker</string>
    <string name="remove_custom_marker">Remove marker</string>
    <string name="open_chunk_entity_nbt">Open chunk entity NBT</string>
    <string name="open_chunk_tile_entity_nbt">Open chunk tile-entity NBT</string>
    <string name="entity_chunk_data">Entity chunk data</string>
    <string name="tile_entity_chunk_data">Tile-entity chunk data</string>
    <string name="nbt_chunk_data">NBT chunk data</string>
    <string name="marker_info" formatted="false">
        <xliff:g example="My awesome marker" id="marker_displayname">%1$s</xliff:g>
        (<xliff:g example="123" id="x_coordinate">%2$d</xliff:g>,
        <xliff:g example="42" id="y_coordinate">%3$d</xliff:g>,
        <xliff:g example="-123" id="z_coordinate">%4$d</xliff:g>)</string>
    <string name="teleported_player_to_xyz_dim" formatted="false">Teleported the player to
        (<xliff:g example="123.4" id="x_coordinate">%1$.1f</xliff:g>,
        <xliff:g example="42.1" id="y_coordinate">%2$.1f</xliff:g>,
        <xliff:g example="-123.9" id="z_coordinate">%3$.1f</xliff:g>)</string>
    <string name="failed_teleporting_player">Failed to teleport player.</string>
    <string name="failed_to_find_or_edit_local_player_data">
        Failed to find/edit local player data.</string>
    <string name="default_custom_marker_name">My custom marker</string>
    <string name="marker_invalid_name">Invalid marker name!</string>
    <string name="invalid_icon_name">Invalid icon name!</string>
    <string name="invalid_x_coordinate">Invalid marker X coordinate!</string>
    <string name="invalid_y_coordinate">Invalid marker Y coordinate!</string>
    <string name="invalid_z_coordinate">Invalid marker Z coordinate!</string>
    <string name="failed_to_create_marker">Error: failed to create marker.</string>
    <string name="failed_to_load_x" formatted="false">
        Failed to load <xliff:g example="some data" id="some_data">%1$s</xliff:g>.
    </string>
    <string name="nbt_editor">NBT editor</string>
    <string name="data_does_not_exist_for_chunk_ask_if_create">
        This type of data does not yet exist for this chunk.
        It needs to exist first, do you want to create it?</string>
    <string name="creating_and_saving_chunk_NBT_data">
        Creating and saving new NBT chunk data…</string>
    <string name="create_world_name">Name:</string>
    <string name="create_world_default_name">My World</string>
    <string name="create_world_version_aqua">1.2.13~latest</string>
    <string name="create_world_version">Version:</string>
    <string name="create_world_layers">Layers:</string>
    <string name="map_sel_menu_sel">Selection</string>
    <string name="map_sel_from_seg_1">From [</string>
    <string name="map_sel_from_seg_2">,</string>
    <string name="map_sel_from_seg_3">]</string>
    <string name="map_sel_range_seg_1">Range</string>
    <string name="map_sel_range_seg_2">x</string>
    <string name="map_sel_menu_apply">Apply</string>
    <string name="map_sel_menu_op">Operations</string>
    <string name="map_edit_func_lampshade">Lampshade Torches</string>
    <string name="map_edit_snr_find_in">Find in</string>
    <string name="map_edit_snr_bg">Background</string>
    <string name="map_edit_snr_fg">Foreground</string>
    <string name="map_edit_snr_or">Either</string>
    <string name="map_edit_snr_both">Both</string>
    <string name="map_edit_snr_find_for">Find for</string>
    <string name="map_edit_snr_fg_slot">Foreground slot:</string>
    <string name="map_edit_snr_bg_slot">Background slot:</string>
    <string name="map_edit_snr_place_in">Then place in</string>
    <string name="map_edit_snr_and_long">Foreground and background</string>
    <string name="map_edit_snr_ignore_subtype">Ignore sub-types</string>
    <string name="map_edit_chbiome_for">For</string>
    <string name="map_edit_chbiome_all">All</string>
    <string name="map_edit_chbiome_for_specific">Specific biome</string>
    <string name="map_edit_chbiome_to">Change to</string>
    <string name="create_new_backup">Create new backup</string>
    <string name="caption_existing_backups">Existing backups</string>
    <string name="auto_del_backups">Automatically delete backups older than 3 days (not deleting if no more than 3 backups exists)</string>
    <string name="auto_make_backups">Automatically make backups whenever opening the world</string>
    <string name="hint_can_leave_empty">You can leave it empty</string>
</resources>