<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="selection"
            type="android.graphics.Rect" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/bg_float_transparent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_sel_menu_sel"
            android:textColor="@color/color_float_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_sel_from_seg_1" />

            <EditText
                android:id="@+id/from_x_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="numberSigned"
                android:text="@{selection==null ? null : Integer.toString(selection.left)}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_sel_from_seg_2" />

            <EditText
                android:id="@+id/from_y_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="numberSigned"
                android:text="@{selection==null ? null : Integer.toString(selection.top)}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_sel_from_seg_3" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{selection==null ? null : @string/map_sel_to(selection.right - 1, selection.bottom - 1)}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_sel_range_seg_1" />

            <EditText
                android:id="@+id/range_w_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="number"
                android:text="@{selection==null ? null : Integer.toString(selection.right - selection.left)}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_sel_range_seg_2" />

            <EditText
                android:id="@+id/range_h_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="number"
                android:text="@{selection==null ? null : Integer.toString(selection.bottom - selection.top)}" />

            <Button
                android:id="@+id/apply_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_sel_menu_apply" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_sel_menu_op"
            android:textColor="@color/color_float_grey" />

        <Button
            android:id="@+id/func_lampshade"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_edit_func_lampshade"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

</layout>