<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_world_name" />

                <EditText
                    android:id="@+id/world_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_world_default_name"
                    android:inputType="text"
                    tools:ignore="Autofill" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_world_version" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/version_aqua"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/version_aqua"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_world_version_aqua" />

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_world_layers" />

                <fragment
                    android:id="@+id/frag_layers"
                    android:name="com.mithrilmania.blocktopograph.flat.EditFlatFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

        <include layout="@layout/common_dialog_activity_posibtn_bar" />

    </LinearLayout>

</layout>