<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/map_edit_func_snr"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" /-->

        <RelativeLayout
            android:id="@+id/frame_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <com.mithrilmania.blocktopograph.view.MeowScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/map_edit_snr_find_in"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <ImageView
                            android:id="@+id/help"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|end"
                            app:srcCompat="@drawable/ic_help_black" />

                    </LinearLayout>

                    <com.jbvincey.nestedradiobutton.NestedFrameRadioGroup
                        android:id="@+id/search_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:checkedButton="@id/rb_search_fg">

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnCount="2"
                            android:orientation="horizontal">

                            <com.jbvincey.nestedradiobutton.NestedRadioButton
                                android:id="@+id/rb_search_bg"
                                android:text="@string/map_edit_snr_bg" />

                            <com.jbvincey.nestedradiobutton.NestedRadioButton
                                android:id="@+id/rb_search_fg"
                                android:text="@string/map_edit_snr_fg" />

                            <com.jbvincey.nestedradiobutton.NestedRadioButton
                                android:id="@+id/rb_search_or"
                                android:text="@string/map_edit_snr_or" />

                            <com.jbvincey.nestedradiobutton.NestedRadioButton
                                android:id="@+id/rb_search_both"
                                android:text="@string/map_edit_snr_both" />

                        </GridLayout>

                    </com.jbvincey.nestedradiobutton.NestedFrameRadioGroup>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_edit_snr_find_for"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <LinearLayout
                        android:id="@+id/frame_search_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            android:id="@+id/search_block_any"
                            layout="@layout/include_block" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/frame_search_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/map_edit_snr_fg_slot" />

                        <include
                            android:id="@+id/search_block_fg"
                            layout="@layout/include_block" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/map_edit_snr_bg_slot" />

                        <include
                            android:id="@+id/search_block_bg"
                            layout="@layout/include_block" />

                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/cb_igsub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_edit_snr_ignore_subtype" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_edit_snr_place_in"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <com.jbvincey.nestedradiobutton.NestedFrameRadioGroup
                        android:id="@+id/place_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:checkedButton="@id/rb_place_fg">

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnCount="2"
                            android:orientation="horizontal">

                            <com.jbvincey.nestedradiobutton.NestedRadioButton
                                android:id="@+id/rb_place_bg"
                                android:text="@string/map_edit_snr_bg" />

                            <com.jbvincey.nestedradiobutton.NestedRadioButton
                                android:id="@+id/rb_place_fg"
                                android:text="@string/map_edit_snr_fg" />

                            <com.jbvincey.nestedradiobutton.NestedRadioButton
                                android:id="@+id/rb_place_both"
                                android:text="@string/map_edit_snr_and_long" />

                        </GridLayout>

                    </com.jbvincey.nestedradiobutton.NestedFrameRadioGroup>


                    <LinearLayout
                        android:id="@+id/frame_place_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include
                            android:id="@+id/replace_block_any"
                            layout="@layout/include_block" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/frame_place_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/map_edit_snr_fg_slot" />

                        <include
                            android:id="@+id/replace_block_fg"
                            layout="@layout/include_block" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/map_edit_snr_bg_slot" />

                        <include
                            android:id="@+id/replace_block_bg"
                            layout="@layout/include_block" />

                    </LinearLayout>

                </LinearLayout>

            </com.mithrilmania.blocktopograph.view.MeowScrollView>

        </RelativeLayout>

        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="6dp"
            android:paddingBottom="9dp"
            android:text="@android:string/ok" />

    </LinearLayout>

</layout>